k8s/pgadmin/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: tp-node
  name: pgadmin
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 8080
            path: /
